testing out clip-path + issues: shadows not working with clipping

--- a/style.css
+++ b/style.css
@@ -52,4 +52,22 @@
 
 .rect-container .rect {
   position: relative;
+  border-radius: 0;
+}
+
+.rect-container .rectH {
+  border-radius: 16px;
+}
+
+.rectJ {
+  clip-path: path(
+    "M256 16C256 7.16344 248.837 0 240 0H16C7.16344 0 0 7.16344 0 16V128C5.12596e-06 161.948 13.4857 194.505 37.4903 218.51C61.495 242.514 94.0523 256 128 256C161.948 256 194.505 242.514 218.51 218.51C242.514 194.505 256 161.948 256 128V16Z"
+  );
+  clip-rule: evenodd;
+}
+
+.rectV {
+  clip-path: path(
+    "M2.57771 23.1554C-2.7415 12.517 4.99443 0 16.8885 0H221.111C233.006 0 240.741 12.517 235.422 23.1554L133.311 227.378C127.414 239.171 110.586 239.171 104.689 227.378L2.57771 23.1554Z"
+  );
 }
